# cons

./: .gitignore  CMakeLists.txt  readme.md  readme.txt
bld/: all_bld.bat  bld.bat  bld.sh  setcc.bat
src/: cons.h  hello.c  otige.c
src/cons/: CMakeLists.txt  cons.h  cons_curses.c  cons_curses.h  cons_pc98.c  cons_pc98.h  cons_pcat.c  cons_pcat.h
src/mines/: mines.c
src/otitame/: otitame.c
src/tool/otige/: gen_shape.cpp
toolchain/: borland-win32-toolchain.cmake  djgpp-dos32-toolchain.cmake  ia16-pcat-dos16-s-toolchain.cmake  linux-toolchain.cmake  mac-toolchain.cmake  mingw-win32-toolchain.cmake  mingw-win64-toolchain.cmake  vc-incl.cmake  vc-win32-md-toolchain.cmake  vc-win32-toolchain.cmake  vc-win64-md-toolchain.cmake  vc-win64-toolchain.cmake  vc-winarm-toolchain.cmake  vc-winarm64-toolchain.cmake  watcom-dos16-s-toolchain.cmake  watcom-dos32-toolchain.cmake  watcom-pc98-dos16-s-toolchain.cmake  watcom-pc98-dos32-toolchain.cmake  watcom-pcat-dos16-s-toolchain.cmake  watcom-pcat-dos32-toolchain.cmake  watcom-win32-toolchain.cmake
